ep_themes compatibility

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ep_ruler",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Adds a ruler to Etherpad lite",
   "author": {
     "name": "Luke Williams",
@@ -16,5 +16,12 @@
   },
   "engines": {
     "node": "*"
-  }
+  },
+  "readme": "ep_ruler\n=============\n\nAdds a ruler to Etherpad lite.\n",
+  "readmeFilename": "README.md",
+  "_id": "ep_ruler@0.0.1",
+  "dist": {
+    "shasum": "0fb62d5e2b93de0730d064925a979620c22061ee"
+  },
+  "_from": "/home/xocel/_DEV/plugins/ep_ruler/"
 }
